# muscle

./: .env  Cargo.toml  README.md  domain.drawio  specification.md  usecase.drawio
migrations/2022-08-22-143115_create_trains/: down.sql  up.sql
src/: constants.rs  main.rs  schema.rs
src/domain/: account.rs  mod.rs  muscle.rs  train.rs  trainee.rs  user.rs
src/middleware/: authn.rs  mod.rs  sayhi.rs
src/presentation/: account.rs  healthcheck.rs  mod.rs  muscle.rs  train.rs  user.rs
src/repository/: account_repository.rs  mod.rs  model.rs  muscle_repository.rs  train_repository.rs  user_repository.rs
src/usecase/: account.rs  mod.rs  muscle.rs  train.rs  train_creater.rs  user.rs
src/utils/: db.rs  errors.rs  mod.rs  state.rs
