[package]
name = "muscle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
actix-web = "4"
serde = {version="1.0",features=["derive"]}
uuid = {version="1.1.2",features=["serde","v4"]}
thiserror = "1.0.31"
serde_json = "1.0.82"
