[package]
name = "muscle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
actix-web = "4"
serde = {version="1.0",features=["derive"]}
uuid = {version="1.1.2",features=["serde","v4"]}
thiserror = "1.0.31"
serde_json = "1.0.82"
serde_yaml="0.9"
diesel={version="1.4.4",features=["mysql","r2d2"]}
dotenv="0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
async-graphql = "4.0"
async-graphql-actix-web = "4.0" # If you need to integrate into actix-web
r2d2 = "0.8.10"
ulid = "1.0.0"
strum = { version = "0.24", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls","mysql" ] }
async-trait = "0.1.58"
jsonwebtoken="8"
bcrypt="0.13"